--- a/experiments/index.html
+++ b/experiments/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="row">
-      <div class="random" id="rand1">
+      <div class="random">
         <div class="column">
           <button class="card-front">
             <img src="cardback.png" />
@@ -35,7 +35,7 @@
         </div>
       </div>
 
-      <div class="random" id="rand2">
+      <div class="random">
         <div class="column">
           <button class="card-front">
             <img src="cardback.png" />
@@ -60,7 +60,7 @@
         </div>
       </div>
 
-      <div class="random" id="rand3">
+      <div class="random">
         <div class="column">
           <button class="card-front">
             <img src="cardback.png" />
@@ -85,7 +85,7 @@
         </div>
       </div>
 
-      <div class="random" id="rand4">
+      <div class="random">
         <div class="column">
           <button class="card-front">
             <img src="cardback.png" />
@@ -110,7 +110,7 @@
         </div>
       </div>
 
-      <div class="random" id="rand5">
+      <div class="random">
         <div class="column">
           <button class="card-front">
             <img src="cardback.png" />
