--- a/experiments/index.html
+++ b/experiments/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fortune Cards</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Girassol&family=Oswald:wght@200..700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
@@ -30,15 +34,20 @@
             <img src="card_banana.png" draggable="false" />
           </div>
           <div class="modal-content">
-            <span class="close">&times;</span>
             <h1>The Banana</h1>
-            <h2>Have you had some fruit today?</h2>
+            <h2>How healthy have you been eating?</h2>
             <ul>
-              <li>Time to drop what you're doing and grab a piece of fruit!</li>
-              <li>DESCRIPTION 2</li>
-              <li>DESCRIPTION 3</li>
+              <li>
+                Maybe it's time to drop what you're doing and grab a piece of
+                fruit.
+              </li>
+              <li>
+                Live healthier, drink more water, Sleep earlier. Take care of
+                yourself.
+              </li>
+              <li>Remember to return your shopping carts after usage.</li>
             </ul>
-            <h1>RETURN</h1>
+            <span class="close">Return</span>
           </div>
         </div>
       </div>
@@ -55,15 +64,14 @@
             <img src="card_burger.png" draggable="false" />
           </div>
           <div class="modal-content">
-            <span class="close">&times;</span>
             <h1>The Burger</h1>
             <h2>You deserve a treat.</h2>
             <ul>
-              <li>DESCRIPTION 1</li>
-              <li>DESCRIPTION 2</li>
-              <li>DESCRIPTION 3</li>
+              <li>You've worked hard, so reward yourself accordingly!</li>
+              <li>Rest and relaxation is equally important to work.</li>
+              <li>Be careful around seafood though.</li>
             </ul>
-            <h1>RETURN</h1>
+            <span class="close">Return</span>
           </div>
         </div>
       </div>
@@ -80,15 +88,19 @@
             <img src="card_mushroom.png" draggable="false" />
           </div>
           <div class="modal-content">
-            <span class="close">&times;</span>
             <h1>The Mushroom</h1>
             <h2>Never a better time to get some sun.</h2>
             <ul>
-              <li>DESCRIPTION 1</li>
-              <li>DESCRIPTION 2</li>
-              <li>DESCRIPTION 3</li>
+              <li>
+                How long have you been at home? Head out and get some sunlight!
+              </li>
+              <li>
+                some time in nature might just be the inspiration you need to
+                get out of your rut.
+              </li>
+              <li>Pick up your trash.</li>
             </ul>
-            <h1>RETURN</h1>
+            <span class="close">Return</span>
           </div>
         </div>
       </div>
@@ -105,15 +117,18 @@
             <img src="card_candy.png" draggable="false" />
           </div>
           <div class="modal-content">
-            <span class="close">&times;</span>
             <h1>The Candy</h1>
             <h2>Good things are coming!</h2>
             <ul>
-              <li>DESCRIPTION 1</li>
-              <li>DESCRIPTION 2</li>
-              <li>DESCRIPTION 3</li>
+              <li>
+                In the sea of bitterness, a tinge of sweetness approaches...
+              </li>
+              <li>
+                The things you seek might just be hidden behind a wrapper.
+              </li>
+              <li>Be kind to others, be kind to yourselves.</li>
             </ul>
-            <h1>RETURN</h1>
+            <span class="close">Return</span>
           </div>
         </div>
       </div>
@@ -130,21 +145,23 @@
             <img src="card_egg.png" draggable="false" />
           </div>
           <div class="modal-content">
-            <span class="close">&times;</span>
             <h1>The Egg</h1>
             <h2>Why does we exist?</h2>
             <ul>
-              <li>DESCRIPTION 1</li>
-              <li>DESCRIPTION 2</li>
-              <li>DESCRIPTION 3</li>
+              <li>The human spirit is stronger than you think, keep going!</li>
+              <li>There will always be another opportunity to try again.</li>
+              <li>
+                If it looks too good to be true, it is. Do not be tempted or
+                fooled.
+              </li>
             </ul>
-            <h1>RETURN</h1>
+            <span class="close">Return</span>
           </div>
         </div>
       </div>
     </div>
     <button id="shuffle" onclick="randomizeOrder()">Reshuffle cards</button>
-    <span id="textAnimation" style="display: none">Shuffled!</span>
+    <span id="textAnimation" style="display: none">Cards Shuffled!</span>
   </body>
 </html>
 
