fixed shuffling on load

--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -161,6 +161,6 @@
       </div>
     </div>
     <button id="shuffle" onclick="randomizeOrder()">Reshuffle cards</button>
-    <span id="textAnimation" style="display: none">Cards Shuffled!</span>
+    <span id="textAnimation" style="display: none">Shuffled!</span>
   </body>
 </html>
