--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -13,14 +13,17 @@
     <script src="script.js" defer></script>
   </head>
   <body>
+    <!-- Lets begin by talking about the background: This background is a striped background, indicated by the stripe container and stripe patterns. The magic happens in the CSS -->
     <div id="stripe-container">
       <div id="stripe-pattern"></div>
     </div>
 
+    <!-- Site header/title -->
     <div class="sitetitle">
       <h1>Pick a card, and let Destiny do the rest:</h1>
     </div>
 
+    <!-- Using row and column divs to arrange the cards horizontally with css flexboxes. -->
     <div class="row">
       <div class="random">
         <div class="column">
