--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -9,16 +9,19 @@
   </head>
   <body>
     <div class="row">
-
       <div class="column1">
-<h2>Lets Make Design </h2>
-<h1>Fun.</h1>
+        <h2>Lets Make Design</h2>
+        <h1>Fun.</h1>
       </div>
 
       <div class="column2">
-<nav>
-  <img href="index.html">
-</nav>
+        <nav>
+          <a href="index.html"
+            ><img href="logo.png" alt="Chen Luohan Logo"
+          /></a>
+          <h3>Chen Luohan</h3>
+          <h3>Digital Media Designer</h3>
+        </nav>
       </div>
     </div>
   </body>
