--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5,24 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Chen Luohan's Portfolio</title>
   </head>
   <body>
-    <div class="row">
-      <div class="column1">
-        <h2>Lets Make Design</h2>
-        <h1>Fun.</h1>
+    <nav>
+      <div class="left">
+        <a href="index.html">Chen Luohan</a>
       </div>
-
-      <div class="column2">
-        <nav>
-          <a href="index.html"
-            ><img href="logo.png" alt="Chen Luohan Logo"
-          /></a>
-          <h3>Chen Luohan</h3>
-          <h3>Digital Media Designer</h3>
-        </nav>
+      <div class="right">
+        <a href="about.html">About</a>
+        <a href="work.html">Works</a>
+        <a href="work.html">Contact</a>
       </div>
-    </div>
+    </nav>
   </body>
 </html>
