--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -15,8 +15,17 @@
       <div class="right">
         <a href="about.html">About</a>
         <a href="work.html">Works</a>
-        <a href="work.html">Contact</a>
+        <a href="contact.html">Contact</a>
       </div>
     </nav>
+
+    <div class="hero">
+      <h1>Digital Designer, Magic Maker.</h1>
+    </div>
+
+    <div class="showcase"></div>
+    <div class="footer">
+      <p>A Chen Luohan Site, Made with Love.</p>
+    </div>
   </body>
 </html>
