--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5,22 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>Chen Luohan's Portfolio</title>
   </head>
   <body>
     <nav>
-      <div class="left">
-        <a href="index.html">Chen Luohan</a>
-      </div>
-      <div class="right">
-        <a href="about.html">About</a>
-        <a href="work.html">Works</a>
-        <a href="contact.html">Contact</a>
-      </div>
+      <div class="logo">
+<a href="index.html">Chen Luohan</a></div>
     </nav>
 
     <div class="hero">
-      <h1>Digital Designer, Magic Maker.</h1>
+      <h1></h1>
     </div>
 
     <div class="showcase"></div>
