--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -14,6 +14,11 @@
     <nav>
       <div class="logo">
 <a href="index.html">Chen Luohan</a></div>
+<div class="selection">
+  <a href="about.html">About</a>
+  <a href="projects.html">Projects</a>
+  <a href="contact.html">Contact</a>
+</div>
     </nav>
 
     <div class="hero">
