--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -6,18 +6,18 @@
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Next:ital,wght@0,200..800;1,200..800&family=IBM+Plex+Serif:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">    
     <title>Chen Luohan's Portfolio</title>
   </head>
   <body>
     <nav>
       <div class="logo">
 <a href="index.html">Chen Luohan</a></div>
+</div>
 <div class="selection">
-  <a href="about.html">About</a>
-  <a href="projects.html">Projects</a>
-  <a href="contact.html">Contact</a>
+  <a href="about.html">ABOUT</a>
+  <a href="projects.html">PROJECTS</a>
+  <a href="contact.html">CONTACT</a>
 </div>
     </nav>
 
@@ -27,7 +27,6 @@
 
     <div class="showcase"></div>
     <div class="footer">
-      <p>A Chen Luohan Site, Made with Love.</p>
     </div>
   </body>
 </html>
