--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -16,14 +16,24 @@
 </div>
 <div class="selection">
   <a href="about.html">ABOUT</a>
-  <a href="projects.html">PROJECTS</a>
   <a href="contact.html">CONTACT</a>
 </div>
     </nav>
 
-    <div class="hero">
-      <h1></h1>
+    <div class="container">
+      
+    <div class="medium">
+      <a href="#all">All</a>
+      <a href="#Video">Video</a>
+      <a href="#Audio">Audio</a>
+      <a href="#grahic">Graphics</a>
+      <a href="#motion">Motion</a>
+      <a href="#web">Websites</a>
     </div>
+<div class="main">
+
+</div>
+</div>
 
     <div class="showcase"></div>
     <div class="footer">
