--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -31,29 +31,27 @@
       <a href="#web">Websites</a>
     </div>
     
-<div class="main">
-            <section class="cards">
-                 
-                <article class="card">
-                  <a href="#item1"><img src="https://picsum.photos/400/300" alt="Item 1"></a>
-                </article>
- 
-    <article class="card">
-      <a href="#item2"><img src="https://picsum.photos/400/300" alt="Item 2"></a>
-            </article>
- 
-<article class="card">
-  <a href="#item3"><img src="https://picsum.photos/400/300" alt="Item 3"></a>
-            </article>
- 
-<article class="card">
-  <a href="#item4"><img src="https://picsum.photos/400/300" alt="Item 4"></a>
-            </article>
-    </section>
-</div>
-</div>
+    <div class="card-container">
+      <!-- Card 1 -->
+      <div class="image-card" onclick="alert('Card 1 clicked!')">
+          <img src="https://picsum.photos/400/300?random=1" alt="Random Image 1" class="card-image">
+      </div>
 
-    <div class="showcase"></div>
+      <!-- Card 2 -->
+      <div class="image-card" onclick="alert('Card 2 clicked!')">
+          <img src="https://picsum.photos/400/300?random=2" alt="Random Image 2" class="card-image">
+      </div>
+
+      <!-- Card 3 -->
+      <div class="image-card" onclick="alert('Card 3 clicked!')">
+          <img src="https://picsum.photos/400/300?random=3" alt="Random Image 3" class="card-image">
+      </div>
+
+      <!-- Card 4 -->
+      <div class="image-card" onclick="alert('Card 4 clicked!')" >
+          <img src="https://picsum.photos/400/300?random=4" alt="Random Image 4" class="card-image">
+      </div>
+  </div>
     <div class="footer">
     </div>
   </body>
