--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -34,22 +34,22 @@
     <div class="card-container">
       <!-- Card 1 -->
       <div class="image-card" onclick="alert('Card 1 clicked!')">
-          <img src="https://picsum.photos/400/300?random=1" alt="Random Image 1" class="card-image">
+          <img src="https://picsum.photos/400/300?random=1" alt="Random Image 1">
       </div>
 
       <!-- Card 2 -->
       <div class="image-card" onclick="alert('Card 2 clicked!')">
-          <img src="https://picsum.photos/400/300?random=2" alt="Random Image 2" class="card-image">
+          <img src="https://picsum.photos/400/300?random=2" alt="Random Image 2">
       </div>
 
       <!-- Card 3 -->
       <div class="image-card" onclick="alert('Card 3 clicked!')">
-          <img src="https://picsum.photos/400/300?random=3" alt="Random Image 3" class="card-image">
+          <img src="https://picsum.photos/400/300?random=3" alt="Random Image 3">
       </div>
 
       <!-- Card 4 -->
       <div class="image-card" onclick="alert('Card 4 clicked!')" >
-          <img src="https://picsum.photos/400/300?random=4" alt="Random Image 4" class="card-image">
+          <img src="https://picsum.photos/400/300?random=4" alt="Random Image 4">
       </div>
   </div>
     <div class="footer">
