--- a/dms5/dms5boilerPlate/index.html
+++ b/dms5/dms5boilerPlate/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" />
     <title>boilerplate</title>
+
+    <link rel="stylesheet" href="style.css" />
+
+    <script src="script.js"></script>
 </head>
 <body>
     <h1>This is my boilerplate</h1>
