--- a/dms5/dms5boilerPlate/index.html
+++ b/dms5/dms5boilerPlate/index.html
@@ -7,7 +7,8 @@
 
     <link rel="stylesheet" href="style.css" />
 
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
+    
 </head>
 <body>
     <h1>This is my boilerplate</h1>
