--- a/dms5/dms5a1/index.html
+++ b/dms5/dms5a1/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>boilerplate</title>
+    <title>dms 5 assignment 1</title>
 
     <link rel="stylesheet" href="style.css" />
 
@@ -11,6 +11,6 @@
     
 </head>
 <body>
-    <h1>This is my boilerplate</h1>
+    <h1>This is my a1</h1>
 </body>
 </html>
