--- a/dms5/dms5a1/index.html
+++ b/dms5/dms5a1/index.html
@@ -11,8 +11,8 @@
     
 </head>
 <body>
-    <h1>Researching xyz</h1>
-    <h4>by xyz</h4>
+    <h1>Researching Wigglypaint by Internet Janitor</h1>
+    <h4>by Chen Luohan</h4>
     <h2>Research Questions</h2>
     <h3>q1</h3>
         <p>Response to q1</p>
