--- a/dms5/colourPickerFeature/index.html
+++ b/dms5/colourPickerFeature/index.html
@@ -15,5 +15,10 @@
 
   <div id="colour-square"></div>
 
+  <div>
+    <input type="color" id="colour-picker" name="colour-picker" value="#ff0000"/>
+    <label for="colour-picker">Choose colour for square</label>
+  </div>
+
 </body>
 </html>
