additional work on A1

--- a/dms5/colourPickerFeature/index.html
+++ b/dms5/colourPickerFeature/index.html
@@ -20,5 +20,12 @@
     <label for="colour-picker">Choose colour for square</label>
   </div>
 
+  <div class="rangepicker">
+    <input type="range" min="0" max="255" id="red" class="slider" value="255"/>
+    <input type="range" min="0" max="255" id="green" class="slider" value="0"/>
+    <input type="range" min="0" max="255" id="blue" class="slider" value="0"/>
+    <label for="range-colour">use the slider to choose colour</label>
+  </div>
+
 </body>
 </html>
