--- a/dms5/dms5a1/index.html
+++ b/dms5/dms5a1/index.html
@@ -34,9 +34,14 @@
     </nav>
 
     <div class="content">
+
+        <div class="qns">
     <h3>1. What genre of creative software do you believe it belongs to?</h3>
         <p>This creative software belongs to a digital drawing tool genre.
         </p>
+    </div>
+
+    <div class="qns">
     <h3>2. List three other examples of software in this genre</h3>
     <p> Other similar softwares in this genre could be:
         <ul>
@@ -46,18 +51,74 @@
         </ul>
         
     </p>
+</div>
+
+    <div class="qns">
     <h3>3. List the program's interactive features/mechanics (one sentence max explanation per feature/mechanic)
     </h3>
+    <p>The program features:
+        <ul>
+            <li>A full suite of digital drawing brushes, such as ink pen, pen, paintbrush, scatter brushes, coloured markers and an eraser.
+            </li>
+            <li>
+                A canvas that allows for the user to freely doodle using one of the listed brushes, and makes the resulting artwork “wiggle”
+            </li>
+            <li>
+                Additional customisation settings give the user the freedom to manipulate the size, arrangement, crop, colour and shape of the artwork and the program as a whole.
+            </li>
+            <li>
+                Sound effects that give the user an audio feedback whenever something on the program is interacted with.
+            </li>
+            <li>
+                The option to save the working file to computer, import images or export a gif.
+            </li>
+        </ul>
+    </p>
+    </div>
+
+    <div class="qns">
     <h3>4. What features/mechanics indicate its genre by aligning with its conventions?
     </h3>
-    <h3>What features/mechanics are novel for its genre?</h3>
-    <h3>What features/mechanics common to its genre are missing or might be added?
+    <p>
+        The features enabling users to draw, edit, erase and delete artworks aligns with the genre of Digital drawing tool as other tools also primarily allow it’s users to manipulate brushes, colours and basic editing to complete an artwork. The main difference between a Digital drawing tool and a full on digital editing tool is the lack of advanced features that users might find in softwares like photoshop.
+    </p>
+    </div>
+
+    <div class="qns">
+    <h3>5. What features/mechanics are novel for its genre?</h3>
+    <p>
+        A novel feature for this program in it’s genre is the “wiggle” that is added to every brushstroke. Most digital drawing tools produce static, non-moving artworks, however, this program features a “wiggle” mechanic that sets it apart from other programs.
+    </p>
+    </div>
+
+    <div class="qns">
+    <h3>6. What features/mechanics common to its genre are missing or might be added?
     </h3>
-    <h3>What context, community or niche is it primarily aimed at and what indicates this?</h3>
-    <h3>What did you find annoying and/or boring about interacting with it?
+    <p>
+        One missing feature in this program that is commonly found in other softwares in it’s genre is the ability to work with layers. Most digital drawing tools contains layer features that allows for the user to work within multiple layers, however, this program does not.
+    </p>
+    </div>
+
+    <div class="qns">
+    <h3>7. What context, community or niche is it primarily aimed at and what indicates this?</h3>
+    <p>This program is primarily aimed at creatives who wants to create casual, simple artworks without the complexity of a full suite drawing software, easily exporting it to be shared online or elsewhere. 
+    </p>
+    </div>
+
+    <div class="qns">
+    <h3>8. What did you find annoying and/or boring about interacting with it?
     </h3>
-    <h3>What did you find enjoyable about interacting with it?
-    </h3>
+    <p>
+        One downside to the program is that the undo feature only undos a single action, and the only way to rid previous mistakes if it’s overwritten is to use the eraser. And without a layer system, it’s difficult to organise the artworks and correct mistakes.
+    </p>
+    </div>
+
+    <div class="qns">
+    <h3>9. What did you find enjoyable about interacting with it?
+    </h3><p>
+        I enjoy the endless possibilities that this program allows, with the combinations of brushes, colours and canvas editing options, this program allows full freedom and creativity only limited by the ability of the user.
+    </p>
+    </div>
 
 </div>
 </wrapper>
