--- a/dms5/dms5a1/index.html
+++ b/dms5/dms5a1/index.html
@@ -35,13 +35,15 @@
 
     <div class="content">
 
-        <div class="qns" id="q1">
+        <div class="qns">
+            <span id="q1" class="anchor"></span>
     <h3>1. What genre of creative software do you believe it belongs to?</h3>
         <p>This creative software belongs to a digital drawing tool genre.
         </p>
     </div>
 
-    <div class="qns" id="q2">
+    <div class="qns">
+        <span id="q2" class="anchor"></span>
     <h3>2. List three other examples of software in this genre</h3>
     <p> Other similar softwares in this genre could be:
         <ul>
@@ -53,7 +55,8 @@
     </p>
 </div>
 
-    <div class="qns" id="q3">
+    <div class="qns">
+        <span id="q3" class="anchor"></span>
     <h3>3. List the program's interactive features/mechanics (one sentence max explanation per feature/mechanic)
     </h3>
     <p>The program features:
@@ -76,7 +79,8 @@
     </p>
     </div>
 
-    <div class="qns" id="q4">
+    <div class="qns">
+        <span id="q4" class="anchor"></span>
     <h3>4. What features/mechanics indicate its genre by aligning with its conventions?
     </h3>
     <p>
@@ -84,14 +88,16 @@
     </p>
     </div>
 
-    <div class="qns" id="q5">
+    <div class="qns">
+        <span id="q5" class="anchor"></span>
     <h3>5. What features/mechanics are novel for its genre?</h3>
     <p>
         A novel feature for this program in it’s genre is the “wiggle” that is added to every brushstroke. Most digital drawing tools produce static, non-moving artworks, however, this program features a “wiggle” mechanic that sets it apart from other programs.
     </p>
     </div>
 
-    <div class="qns" id="q6">
+    <div class="qns">
+        <span id="q6" class="anchor"></span>
     <h3>6. What features/mechanics common to its genre are missing or might be added?
     </h3>
     <p>
@@ -99,13 +105,15 @@
     </p>
     </div>
 
-    <div class="qns" id="q7">
+    <div class="qns">
+        <span id="q7" class="anchor"></span>
     <h3>7. What context, community or niche is it primarily aimed at and what indicates this?</h3>
     <p>This program is primarily aimed at creatives who wants to create casual, simple artworks without the complexity of a full suite drawing software, easily exporting it to be shared online or elsewhere. 
     </p>
     </div>
 
-    <div class="qns" id="q8">
+    <div class="qns">
+        <span id="q8" class="anchor"></span>
     <h3>8. What did you find annoying and/or boring about interacting with it?
     </h3>
     <p>
@@ -113,7 +121,8 @@
     </p>
     </div>
 
-    <div class="qns" id="q9">
+    <div class="qns">
+        <span id="q9" class="anchor"></span>
     <h3>9. What did you find enjoyable about interacting with it?
     </h3><p>
         I enjoy the endless possibilities that this program allows, with the combinations of brushes, colours and canvas editing options, this program allows full freedom and creativity only limited by the ability of the user.
