--- a/dms5/dms5a1/index.html
+++ b/dms5/dms5a1/index.html
@@ -129,7 +129,16 @@
     </p>
     </div>
 
+    <div class="qns">
+        <h3>Interaction Video</h3>
+        <span id="video" class="anchor"></span>
+        <video width="640" height="480" controls>
+            <source src="wigglepaint.mp4" type="video/mp4">
+    </div>
+
 </div>
 </wrapper>
+<footer>
+    <h4>A Chen Luohan Site, Made with 90% love and 10% Coffee.</h4>
 </body>
 </html>
