--- a/dms5/dms5a1/index.html
+++ b/dms5/dms5a1/index.html
@@ -30,7 +30,7 @@
         <a class="button" href="#q7" class="button">7</a>
         <a class="button" href="#q8" class="button">8</a>
         <a class="button" href="#q9" class="button">9</a>
-        <a class="button" href="#video" class="button">vid</a>
+        <a class="button" href="#video" class="button">video</a>
     </nav>
 
     <div class="content">
