--- a/dms5/dms5a1/index.html
+++ b/dms5/dms5a1/index.html
@@ -21,16 +21,16 @@
 <wrapper>
 
     <nav>
-        <a class="button" href="#q1" class="button">1</a>
-        <a class="button" href="#q2" class="button">2</a>
-        <a class="button" href="#q3" class="button">3</a>
-        <a class="button" href="#q4" class="button">4</a>
-        <a class="button" href="#q5" class="button">5</a>
-        <a class="button" href="#q6" class="button">6</a>
-        <a class="button" href="#q7" class="button">7</a>
-        <a class="button" href="#q8" class="button">8</a>
-        <a class="button" href="#q9" class="button">9</a>
-        <a class="button" href="#video" class="button">video</a>
+        <a class="button" href="#q1">1</a>
+        <a class="button" href="#q2">2</a>
+        <a class="button" href="#q3">3</a>
+        <a class="button" href="#q4">4</a>
+        <a class="button" href="#q5">5</a>
+        <a class="button" href="#q6">6</a>
+        <a class="button" href="#q7">7</a>
+        <a class="button" href="#q8">8</a>
+        <a class="button" href="#q9">9</a>
+        <a class="buttonv" href="#video">video</a>
     </nav>
 
     <div class="content">
@@ -129,7 +129,7 @@
     </p>
     </div>
 
-    <div class="qns">
+    <div class="qnsv">
         <h3>Interaction Video</h3>
         <span id="video" class="anchor"></span>
         <video width="640" height="480" controls>
