added click to add shapes in konva

--- a/dms5/dms5a3/index.html
+++ b/dms5/dms5a3/index.html
@@ -15,7 +15,9 @@
 <body>
 
     <div id="stageContainer"></div>
-
-    
+    <!-- <button id="addCircle">Add Circle</button>
+    <button id="addSquare">Add Square</button>
+    <button id="addTriangle">Add Triangle</button>
+     -->
 </body>
 </html>
