Added buttons in html

--- a/dms5/dms5a3/index.html
+++ b/dms5/dms5a3/index.html
@@ -15,9 +15,9 @@
 <body>
 
     <div id="stageContainer"></div>
-    <!-- <button id="addCircle">Add Circle</button>
-    <button id="addSquare">Add Square</button>
-    <button id="addTriangle">Add Triangle</button>
-     -->
+    <button class="changeShape" id="shape1">Circle</button>
+    <button class="changeShape" id="shape2">Square</button>
+    <button class="changeShape" id="shape3">Triangle</button>
+    
 </body>
 </html>
