added button to change what shape is selected, colour change to shapes

--- a/dms5/dms5a3/index.html
+++ b/dms5/dms5a3/index.html
@@ -18,6 +18,7 @@
     <button class="changeShape" id="shape1">Circle</button>
     <button class="changeShape" id="shape2">Square</button>
     <button class="changeShape" id="shape3">Triangle</button>
+    <input type="color" id="colourPicker" value="#ff0000"></input>
     
 </body>
 </html>
