console log feedback demo :)

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -24,11 +24,11 @@
 
     <div class="medium">
       <a href="#all">All</a>
-      <a href="#Video">Video</a>
-      <a href="#Audio">Audio</a>
+      <a href="#video">Video</a>
+      <a href="#web">Web</a>
+      <a href="#audio">Audio</a>
       <a href="#grahic">Graphics</a>
       <a href="#motion">Motion</a>
-      <a href="#web">Websites</a>
     </div>
     
     <div class="card-container">
@@ -49,7 +49,17 @@
 
       <!-- Card 4 -->
       <div class="image-card" onclick="alert('Card 4 clicked!')" >
-          <img src="https://picsum.photos/400/300?random=4" alt="Random Image 4">
+          <img src="https://picsum.photos/400/300?random=5" alt="Random Image 4">
+      </div>
+
+            <!-- Card 5 -->
+      <div class="image-card" onclick="alert('Card 4 clicked!')" >
+          <img src="https://picsum.photos/400/300?random=5" alt="Random Image 5">
+      </div>
+
+            <!-- Card 6 -->
+      <div class="image-card" onclick="alert('Card 4 clicked!')" >
+          <img src="https://picsum.photos/400/300?random=6" alt="Random Image 6">
       </div>
   </div>
     <div class="footer">
