--- a/dms5/dms5a3/index.html
+++ b/dms5/dms5a3/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
 
     <script src="https://unpkg.com/konva@9/konva.min.js" defer></script>
+    <script src="http://unpkg.com/tone" defer></script>
+
     <script src="konvaSetup.js" defer></script>
     <script src="script.js" defer></script>
 
