--- a/dms5/dms5a3/index.html
+++ b/dms5/dms5a3/index.html
@@ -15,18 +15,27 @@
     <title>DAW</title>
 </head>
 <body>
-
+<div class="title">
+    <h1>DAW</h1>
+</div>
     <div id="stageContainer"></div>
-    <button class="changeShape" id="shape1">Circle</button>
-    <button class="changeShape" id="shape2">Square</button>
-    <button class="changeShape" id="shape3">Triangle</button>
-    <input type="color" id="colourPicker" value="#ff0000"></input>
-    <button id="playButton">Play</button>
-    <label for="tempoSlider">Tempo: <span id="tempoDisplay">120</span> BPM</label>
-<input type="range" id="tempoSlider" min="60" max="200" value="120">
-
-<button id="startLoop">Loop Play</button>
-<button id="stopLoop">Loop Stop</button>
     
+    <div class="options">
+    <div class="shapeSelector">
+    <button class="changeShape"id="shape1"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="50px" fill="#000000"><path d="M480-80q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z"/></svg></button>
+    <button class="changeShape" id="shape2"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="50px" fill="#000000"><path d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h560q33 0 56.5 23.5T840-760v560q0 33-23.5 56.5T760-120H200Zm0-80h560v-560H200v560Z"/></svg></button>
+    <button class="changeShape" id="shape3"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="50px" fill="#000000"><path d="m80-160 400-640 400 640H80Zm144-80h512L480-650 224-240Zm256-205Z"/></svg></button>
+    <input type="color" id="colourPicker" value="#ff0000"></input>
+</div>
+
+<div class="playbackOptions">
+    <label for="tempoSlider" style="color: Black">Tempo: <span id="tempoDisplay">120</span> BPM</label>
+<input type="range" id="tempoSlider" min="60" max="200" value="120">
+<button id="playButton"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="50px" fill="#000000"><path d="M320-200v-560l440 280-440 280Zm80-280Zm0 134 210-134-210-134v268Z"/></svg></button>
+
+<button id="startLoop"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="50px" fill="#000000"><path d="M220-260q-92 0-156-64T0-480q0-92 64-156t156-64q37 0 71 13t61 37l68 62-60 54-62-56q-16-14-36-22t-42-8q-58 0-99 41t-41 99q0 58 41 99t99 41q22 0 42-8t36-22l310-280q27-24 61-37t71-13q92 0 156 64t64 156q0 92-64 156t-156 64q-37 0-71-13t-61-37l-68-62 60-54 62 56q16 14 36 22t42 8q58 0 99-41t41-99q0-58-41-99t-99-41q-22 0-42 8t-36 22L352-310q-27 24-61 37t-71 13Z"/></svg></button>
+<button id="stopLoop"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="50px" fill="#000000"><path d="M320-320h320v-320H320v320ZM480-80q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z"/></svg></button>
+</div>
+</div>
 </body>
 </html>
